[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/kenney_pixelplatformer/Characters/character_0006.png" type="Texture" id=1]
[ext_resource path="res://Assets/kenney_pixelplatformer/Characters/character_0007.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Goldy.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 3.44128

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.9503
height = 2.37714

[node name="Goldy" type="KinematicBody2D"]
position = Vector2( -0.396851, 0 )
scale = Vector2( 3, 3 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
monitoring = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 3 )

[node name="PathTimer" type="Timer" parent="."]

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2( 0, 1.00113 )
enabled = true
cast_to = Vector2( 0, 11 )

[node name="PlatformCheck" type="RayCast2D" parent="."]
position = Vector2( -14.1262, 0 )
cast_to = Vector2( 0, 30 )

[node name="FlightTimer" type="Timer" parent="."]
one_shot = true
